--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 
     <div class="footer-col-1 column">
       <ul>
-        <li>{{ site.title }}</li>
+        <li class='lol-logo'><img src="/assets/lol_logo.png" alt="Loldesign Logo"></li>
         <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
       </ul>
     </div>
@@ -12,7 +12,7 @@
     <div class="footer-col-2 column">
       <ul>
         <li>
-          <a href="https://github.com/{{ site.username }}">
+          <a href="https://github.com/{{ site.github_username }}">
             <span class="icon github">
               <svg version="1.1" class="github-icon-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                  viewBox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">
@@ -31,7 +31,7 @@
           </a>
         </li>
         <li>
-          <a href="https://twitter.com/{{ site.username }}">
+          <a href="https://twitter.com/{{ site.twitter_username }}">
             <span class="icon twitter">
               <svg version="1.1" class="twitter-icon-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                  viewBox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">
