--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,10 @@
 
     {% include footer.html %}
 
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="{{ "/assets/javascripts/fancybox/jquery.fancybox.pack.js" | prepend: site.baseurl }}" type="text/javascript" charset="utf-8"></script>
+    <script src="{{ "/assets/javascripts/application.js" | prepend: site.baseurl }}" type="text/javascript" charset="utf-8"></script>
+    
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
