--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,13 @@ a:visited { color: #205caa; }
   zoom: 1;
 }
 
+img{
+  max-width: 100%;
+}
+
+li{
+  list-style: none;
+}
 
 /* Layout Styles */
 /* ----------------------------------------------------------*/
