--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,10 @@ li{
   list-style: none;
 }
 
+.center{
+  text-align: center;
+}
+
 /* Layout Styles */
 /* ----------------------------------------------------------*/
 
