--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-
+    <!-- zanox test -->
+    <meta name="verification" content="cdf35da6353842b0be9cf1a364ae13ac" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/assets/stylesheets/fancybox/jquery.fancybox.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
